<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weathere</string>

    <string name="select_place">Select location</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <string name="about_text">Icons are designed by Alfredo Hernandez from Flaticon</string>

    <string name="hint_find_place">Find location</string>

    <string name="error_no_internet">No internet connection</string>
    <string name="error_place_predictions_api">Fail to load location predictions</string>
    <string name="error_place_api">Fail to load location</string>
    <string name="error_weather_api">Weather data is unavailable</string>

    <string name="update_on_schedule">Update weather by schedule</string>
    <string name="update_interval">Update interval</string>

    <string name="interval_30_minutes">30 minutes</string>
    <string name="interval_1_hour">1 hour</string>
    <string name="interval_2_hours">2 hour</string>
    <string name="interval_4_hours">4 hours</string>
    <string name="interval_6_hours">6 hours</string>
    <string name="interval_12_hours">12 hours</string>
    <string name="interval_1_day">1 day</string>

    <string name="cloudiness">Cloudiness</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>

    <string name="temperature_value">%d°</string>
    <string name="cloudiness_value">%d%%</string>
    <string name="wind_value">%d m/s</string>
    <string name="humidity_value">%d%%</string>
    <string name="pressure_value">%d mm Hg</string>

    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="updating" tools:ignore="TypographyEllipsis">Updating...</string>
</resources>
